# todo

./: README.md  pyproject.toml
.github/workflows/: add_labels.yml
src/todo/: bootstrap.py  cli.py  exceptions.py  repository.py  storage.py  task.py  task_repository.py  todo_app.py  todo_list.py
tests/developer/: conftest.py  fakes.py  test_task_repository.py  test_todo_app.py
tests/functional/: cli_commands.py  conftest.py  test_change_task_status.py  test_create_task.py
tests/integration/: test_todo_list_repository.py
tests/unit/: test_cli.py  test_task.py  test_todo_list.py
